--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <title>Eofol4</title>
+
+    <style>
+        html {
+            margin: 0;
+            height: 100%;
+            text-rendering: optimizeLegibility;
+            -webkit-font-smoothing: antialiased;
+            -webkit-text-size-adjust: 100%;
+            line-height: 1.5;
+            -moz-osx-font-smoothing: grayscale;
+            touch-action: manipulation;
+        }
+
+        body {
+            margin: 0;
+            height: 100%;
+            background-size: cover;
+            background-color: #1A202C;
+            background-blend-mode: multiply;
+            background-attachment: fixed;
+            font-family: Inter, sans-serif;
+            font-size: 16px;
+            font-weight: 400;
+            color: #EDF2F7;
+        }
+
+        .container {
+            margin: 0 auto 0 auto;
+            padding: 32px 32px;
+            text-align: center;
+        }
+
+        p {
+            margin: 0 0 0 0;
+        }
+
+        @font-face {
+            font-family: 'Inter';
+            src:  url('./fonts/Inter.woff2') format('woff2')
+        }
+    </style>
 </head>
 <body>
+<div class="container">
     <h1>TADA</h1>
 
-    <script src="./assets/js/index.js"></script>
+    <p id="script">Script not injected.</p>
+
+</div>
+
+<script src="./assets/js/index.js"></script>
 </body>
 </html>
