Include dependency to bundle

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,7 @@
     <h1>TADA</h1>
 
     <p id="script">Script not injected.</p>
+    <p id="module">External dependency not imported.</p>
 
 </div>
 
