--- a/public/index.html
+++ b/public/index.html
@@ -1,59 +1,58 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Eofol4</title>
 
     <style>
-        html {
-            margin: 0;
-            height: 100%;
-            text-rendering: optimizeLegibility;
-            -webkit-font-smoothing: antialiased;
-            -webkit-text-size-adjust: 100%;
-            line-height: 1.5;
-            -moz-osx-font-smoothing: grayscale;
-            touch-action: manipulation;
-        }
+      html {
+        margin: 0;
+        height: 100%;
+        text-rendering: optimizeLegibility;
+        -webkit-font-smoothing: antialiased;
+        -webkit-text-size-adjust: 100%;
+        line-height: 1.5;
+        -moz-osx-font-smoothing: grayscale;
+        touch-action: manipulation;
+      }
 
-        body {
-            margin: 0;
-            height: 100%;
-            background-size: cover;
-            background-color: #1A202C;
-            background-blend-mode: multiply;
-            background-attachment: fixed;
-            font-family: Inter, sans-serif;
-            font-size: 16px;
-            font-weight: 400;
-            color: #EDF2F7;
-        }
+      body {
+        margin: 0;
+        height: 100%;
+        background-size: cover;
+        background-color: #1a202c;
+        background-blend-mode: multiply;
+        background-attachment: fixed;
+        font-family: Inter, sans-serif;
+        font-size: 16px;
+        font-weight: 400;
+        color: #edf2f7;
+      }
 
-        .container {
-            margin: 0 auto 0 auto;
-            padding: 32px 32px;
-            text-align: center;
-        }
+      .container {
+        margin: 0 auto 0 auto;
+        padding: 32px 32px;
+        text-align: center;
+      }
 
-        p {
-            margin: 0 0 0 0;
-        }
+      p {
+        margin: 0 0 0 0;
+      }
 
-        @font-face {
-            font-family: 'Inter';
-            src:  url('./fonts/Inter.woff2') format('woff2')
-        }
+      @font-face {
+        font-family: "Inter";
+        src: url("./fonts/Inter.woff2") format("woff2");
+      }
     </style>
-</head>
-<body>
-<div class="container">
-    <h1>TADA</h1>
+  </head>
+  <body>
+    <div class="container">
+      <h1>TADA</h1>
 
-    <p id="script">Script not injected.</p>
-    <p id="module">External dependency not imported.</p>
+      <p id="script">Script not injected.</p>
+      <p id="module">External dependency not imported.</p>
+    </div>
 
-</div>
-
-<script src="./assets/js/index.js"></script>
-</body>
+    <script src="./assets/js/index.js"></script>
+  </body>
 </html>
