Add image dependency and seo stuff

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         background-color: #1a202c;
         background-blend-mode: multiply;
         background-attachment: fixed;
+        background-image: url("./rainbow-mountains-peru.jpg");
         font-family: Inter, sans-serif;
         font-size: 16px;
         font-weight: 400;
@@ -43,11 +44,18 @@
         font-family: "Inter";
         src: url("./fonts/Inter.woff2") format("woff2");
       }
+
+      .phi {
+        background-color: #1a9595;
+        border-radius: 8px;
+        margin: 32px 0 32px 0;
+      }
     </style>
   </head>
   <body>
     <div class="container">
-      <h1>TADA</h1>
+      <h1>Eofol4 app</h1>
+      <img src="./phi.svg" alt="Eofol logo greek letter Phi" height="192px" width="192px" class="phi" />
 
       <p id="script">Script not injected.</p>
       <p id="module">External dependency not imported.</p>
