Generate pages from templates

--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,8 @@
 
       <p id="script">Script not injected.</p>
       <p id="module">External dependency not imported.</p>
+
+      <a href="./index2.html">Second page</a>
     </div>
 
     <script src="./assets/js/index.js"></script>
