Add 404 page and assets, page metadata and fix some scripts

--- a/public/404.html
+++ b/public/404.html
@@ -68,13 +68,10 @@
   </head>
   <body>
     <div class="container">
-      <h1>Eofol4 app</h1>
+      <h1>Page not found</h1>
       <img src="./phi.svg" alt="Eofol logo greek letter Phi" height="192px" width="192px" class="phi" />
 
-      <p id="script">Script not injected.</p>
-      <p id="module">External dependency not imported.</p>
-
-      <a href="./index2.html">Second page</a>
+      <p>The requested page does not exist.</p>
     </div>
 
     <script src="./assets/js/index.js"></script>
