Add html and js minifier, dotenv, refactor media build structure, start env and default env and such

--- a/public/404.html
+++ b/public/404.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Eofol4</title>
+    <title>Eofol4 - Page not found</title>
     <meta charset="UTF-8"></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
     <meta name="theme-color" content="#000000"></meta>
@@ -37,7 +37,7 @@
         background-color: #1a202c;
         background-blend-mode: multiply;
         background-attachment: fixed;
-        background-image: url("./rainbow-mountains-peru.jpg");
+          background-image: url("./assets/media/images/rainbow-mountains-peru.jpg");
         font-family: Inter, sans-serif;
         font-size: 16px;
         font-weight: 400;
@@ -56,7 +56,7 @@
 
       @font-face {
         font-family: "Inter";
-        src: url("./fonts/Inter.woff2") format("woff2");
+        src: url("./assets/media/fonts/Inter.woff2") format("woff2");
       }
 
       .phi {
@@ -69,11 +69,11 @@
   <body>
     <div class="container">
       <h1>Page not found</h1>
-      <img src="./phi.svg" alt="Eofol logo greek letter Phi" height="192px" width="192px" class="phi" />
+      <img src="assets/media/icons/phi.svg" alt="Eofol logo greek letter Phi" height="192px" width="192px" class="phi" />
 
-      <p>The requested page does not exist.</p>
+      <p id="404-msg">The requested page does not exist.</p>
     </div>
 
-    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/404.js"></script>
   </body>
 </html>
