--- a/pages/index.html
+++ b/pages/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Eofol4 - Page not found</title>
+    <title>Eofol4</title>
     <meta charset="UTF-8"></meta>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
     <meta name="theme-color" content="#000000"></meta>
@@ -15,7 +15,7 @@
     <meta property="og:image:width" content="512"></meta>
     <meta property="og:image:height" content="512"></meta>
     <link rel="icon" href="favicon.png"></link>
-    <link rel="apple-touch-icon" href="./assets/media/images/logo-sm.png"></link>
+    <link rel="apple-touch-icon" href="../public/assets/media/images/logo-sm.png"></link>
     <link rel="manifest" href="manifest.json"></link>
 
     <style>
@@ -37,7 +37,7 @@
         background-color: #1a202c;
         background-blend-mode: multiply;
         background-attachment: fixed;
-          background-image: url("./assets/media/images/rainbow-mountains-peru.jpg");
+          background-image: url("../public/assets/media/images/rainbow-mountains-peru.jpg");
         font-family: Inter, sans-serif;
         font-size: 16px;
         font-weight: 400;
@@ -56,7 +56,7 @@
 
       @font-face {
         font-family: "Inter";
-        src: url("./assets/media/fonts/Inter.woff2") format("woff2");
+        src: url("../public/assets/media/fonts/Inter.woff2") format("woff2");
       }
 
       .phi {
@@ -68,12 +68,15 @@
   </head>
   <body>
     <div class="container">
-      <h1>Page not found</h1>
-      <img src="assets/media/icons/phi.svg" alt="Eofol logo greek letter Phi" height="192px" width="192px" class="phi" />
+      <h1>Eofol4 app</h1>
+      <img src="../public/assets/media/icons/phi.svg" alt="Eofol logo greek letter Phi" height="192px" width="192px" class="phi" />
 
-      <p id="404-msg">The requested page does not exist.</p>
+      <p id="script">Script not injected.</p>
+      <p id="module">External dependency not imported.</p>
+
+      <a href="../public/index2.html">Second page</a>
     </div>
 
-    <script src="./assets/js/404.js"></script>
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
