Fix media assets paths

--- a/pages/index.html
+++ b/pages/index.html
@@ -15,7 +15,7 @@
     <meta property="og:image:width" content="512"></meta>
     <meta property="og:image:height" content="512"></meta>
     <link rel="icon" href="favicon.png"></link>
-    <link rel="apple-touch-icon" href="../public/assets/media/images/logo-sm.png"></link>
+    <link rel="apple-touch-icon" href="../assets/media/images/logo-sm.png"></link>
     <link rel="manifest" href="manifest.json"></link>
 
     <style>
@@ -37,7 +37,7 @@
         background-color: #1a202c;
         background-blend-mode: multiply;
         background-attachment: fixed;
-          background-image: url("../public/assets/media/images/rainbow-mountains-peru.jpg");
+          background-image: url("../assets/media/images/rainbow-mountains-peru.jpg");
         font-family: Inter, sans-serif;
         font-size: 16px;
         font-weight: 400;
@@ -56,7 +56,7 @@
 
       @font-face {
         font-family: "Inter";
-        src: url("../public/assets/media/fonts/Inter.woff2") format("woff2");
+        src: url("../assets/media/fonts/Inter.woff2") format("woff2");
       }
 
       .phi {
@@ -69,7 +69,7 @@
   <body>
     <div class="container">
       <h1>Eofol4 app</h1>
-      <img src="../public/assets/media/icons/phi.svg" alt="Eofol logo greek letter Phi" height="192px" width="192px" class="phi" />
+      <img src="../assets/media/icons/phi.svg" alt="Eofol logo greek letter Phi" height="192px" width="192px" class="phi" />
 
       <p id="script">Script not injected.</p>
       <p id="module">External dependency not imported.</p>
