--- a/pages/index.html
+++ b/pages/index.html
@@ -68,7 +68,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Eofol4 app</h1>
+      <h1>Eofol4 app - Index page</h1>
       <img src="./assets/media/icons/phi.svg" alt="Eofol logo greek letter Phi" height="192px" width="192px" class="phi" />
 
       <p id="script">Script not injected.</p>
