Watch file changes and hot update on change, style links

--- a/pages/index.html
+++ b/pages/index.html
@@ -54,6 +54,25 @@
         margin: 0 0 0 0;
       }
 
+
+      a {
+          text-decoration: none;
+          font-weight: 700;
+          color: #1a9595;
+      }
+
+      a:visited {
+          color: #197a7a;
+      }
+
+      a:hover {
+          color: #46c8c8;
+      }
+
+      a:active {
+          color: #197a7a;
+      }
+
       @font-face {
         font-family: "Inter";
         src: url("./assets/media/fonts/Inter.woff2") format("woff2");
