--- a/pages/index.html
+++ b/pages/index.html
@@ -96,6 +96,9 @@
       <a href="./index2.html">Second page</a>
     </div>
 
-    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/runtime.js" defer async></script>
+    <script src="./assets/js/dependencies.js" defer async></script>
+    <script src="./assets/js/index.js" defer async></script>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
 </html>
