--- a/pages/license.html
+++ b/pages/license.html
@@ -63,6 +63,24 @@
           margin-top: 16px;
       }
 
+      a {
+          text-decoration: none;
+          font-weight: 700;
+          color: #1a9595;
+      }
+
+      a:visited {
+          color: #197a7a;
+      }
+
+      a:hover {
+          color: #46c8c8;
+      }
+
+      a:active {
+          color: #197a7a;
+      }
+
       .license-container {
           max-width: 800px;
           margin: 0 auto 0 auto;
@@ -97,5 +115,10 @@
     </p>
   </div>
 </div>
+
+<script src="./assets/js/runtime.js" defer async></script>
+<script src="./assets/js/dependencies.js" defer async></script>
+<script src="./assets/js/license.js" defer async></script>
+<noscript>You need to enable JavaScript to run this app.</noscript>
 </body>
 </html>
