--- a/pages/index.html
+++ b/pages/index.html
@@ -94,6 +94,7 @@
       <p id="module">External dependency not imported.</p>
 
       <a href="./index2.html">Second page</a>
+      <a href="./map.html">Map</a>
     </div>
 
     <script src="./assets/js/runtime.js" defer async></script>
