--- a/pages/404.html
+++ b/pages/404.html
@@ -84,6 +84,7 @@
       @font-face {
           font-family: "Inter";
           src: url("./assets/media/fonts/Inter.woff2") format("woff2");
+          font-display: swap;
       }
 
       .phi {
