Clear prettier warnings

--- a/pages/index.html
+++ b/pages/index.html
@@ -2,21 +2,23 @@
 <html lang="en">
   <head>
     <title>Eofol4</title>
-    <meta charset="UTF-8"></meta>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
-    <meta name="theme-color" content="#000000"></meta>
-    <meta name="description" content="All inclusive web framework with zero configuration, batteries included!"></meta>
-    <meta property="og:description"
-          content="All inclusive web framework with zero configuration, batteries included!"></meta>
-    <meta name="keywords" content="JS,Frontend framework"></meta>
-    <meta name="author" content="Jakub Eliáš"></meta>
-    <meta property="og:image" content="./assets/media/images/logo-lg.png"></meta>
-    <meta property="og:image:type" content="image/png"></meta>
-    <meta property="og:image:width" content="512"></meta>
-    <meta property="og:image:height" content="512"></meta>
-    <link rel="icon" href="favicon.png"></link>
-    <link rel="apple-touch-icon" href="./assets/media/images/logo-sm.png"></link>
-    <link rel="manifest" href="manifest.json"></link>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="All inclusive web framework with zero configuration, batteries included!" />
+    <meta
+      property="og:description"
+      content="All inclusive web framework with zero configuration, batteries included!"
+    />
+    <meta name="keywords" content="JS,Frontend framework" />
+    <meta name="author" content="Jakub Eliáš" />
+    <meta property="og:image" content="./assets/media/images/logo-lg.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
+    <link rel="icon" href="favicon.png" />
+    <link rel="apple-touch-icon" href="./assets/media/images/logo-sm.png" />
+    <link rel="manifest" href="manifest.json" />
 
     <style>
       html {
@@ -37,7 +39,7 @@
         background-color: #1a202c;
         background-blend-mode: multiply;
         background-attachment: fixed;
-          background-image: url("./assets/media/images/rainbow-mountains-peru.jpg");
+        background-image: url("./assets/media/images/rainbow-mountains-peru.jpg");
         font-family: Inter, sans-serif;
         font-size: 16px;
         font-weight: 400;
@@ -54,23 +56,22 @@
         margin: 0 0 0 0;
       }
 
-
       a {
-          text-decoration: none;
-          font-weight: 700;
-          color: #1a9595;
+        text-decoration: none;
+        font-weight: 700;
+        color: #1a9595;
       }
 
       a:visited {
-          color: #197a7a;
+        color: #197a7a;
       }
 
       a:hover {
-          color: #46c8c8;
+        color: #46c8c8;
       }
 
       a:active {
-          color: #197a7a;
+        color: #197a7a;
       }
 
       @font-face {
@@ -86,26 +87,32 @@
       }
 
       .col {
-          display: flex;
-          flex-direction: column;
+        display: flex;
+        flex-direction: column;
       }
 
       .m-t-md {
-          margin-top: 16px;
+        margin-top: 16px;
       }
     </style>
   </head>
   <body>
     <div class="container">
       <h1>Eofol4 app - Index page</h1>
-      <img src="./assets/media/icons/phi.svg" alt="Eofol logo greek letter Phi" height="192px" width="192px" class="phi" />
+      <img
+        src="./assets/media/icons/phi.svg"
+        alt="Eofol logo greek letter Phi"
+        height="192px"
+        width="192px"
+        class="phi"
+      />
 
       <p id="script">Script not injected.</p>
       <p id="module">External dependency not imported.</p>
 
-      <div class="col m-t-md ">
-      <a href="./index2.html">Second page</a>
-      <a href="./map.html">Map</a>
+      <div class="col m-t-md">
+        <a href="./index2.html">Second page</a>
+        <a href="./map.html">Map</a>
       </div>
     </div>
 
