--- a/pages/license.html
+++ b/pages/license.html
@@ -1,125 +1,128 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <title>Eofol4</title>
-  <meta charset="UTF-8"></meta>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
-  <meta name="theme-color" content="#000000"></meta>
-  <meta name="description" content="All inclusive web framework with zero configuration, batteries included!"></meta>
-  <meta property="og:description"
-        content="All inclusive web framework with zero configuration, batteries included!"></meta>
-  <meta name="keywords" content="JS,Frontend framework"></meta>
-  <meta name="author" content="Jakub Eliáš"></meta>
-  <meta property="og:image" content="./assets/media/images/logo-lg.png"></meta>
-  <meta property="og:image:type" content="image/png"></meta>
-  <meta property="og:image:width" content="512"></meta>
-  <meta property="og:image:height" content="512"></meta>
-  <link rel="icon" href="favicon.png"></link>
-  <link rel="apple-touch-icon" href="./assets/media/images/logo-sm.png"></link>
-  <link rel="manifest" href="manifest.json"></link>
+  <head>
+    <title>Eofol4 - License</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="All inclusive web framework with zero configuration, batteries included!" />
+    <meta
+      property="og:description"
+      content="All inclusive web framework with zero configuration, batteries included!"
+    />
+    <meta name="keywords" content="JS,Frontend framework" />
+    <meta name="author" content="Jakub Eliáš" />
+    <meta property="og:image" content="./assets/media/images/logo-lg.png" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="512" />
+    <meta property="og:image:height" content="512" />
+    <link rel="icon" href="favicon.png" />
+    <link rel="apple-touch-icon" href="./assets/media/images/logo-sm.png" />
+    <link rel="manifest" href="manifest.json" />
 
-  <style>
+    <style>
       html {
-          margin: 0;
-          height: 100%;
-          text-rendering: optimizeLegibility;
-          -webkit-font-smoothing: antialiased;
-          -webkit-text-size-adjust: 100%;
-          line-height: 1.5;
-          -moz-osx-font-smoothing: grayscale;
-          touch-action: manipulation;
+        margin: 0;
+        height: 100%;
+        text-rendering: optimizeLegibility;
+        -webkit-font-smoothing: antialiased;
+        -webkit-text-size-adjust: 100%;
+        line-height: 1.5;
+        -moz-osx-font-smoothing: grayscale;
+        touch-action: manipulation;
       }
 
       body {
-          margin: 0;
-          height: 100%;
-          background-size: cover;
-          background-color: #1a202c;
-          background-blend-mode: multiply;
-          background-attachment: fixed;
-          background-image: url("./assets/media/images/rainbow-mountains-peru.jpg");
-          font-family: Inter, sans-serif;
-          font-size: 16px;
-          font-weight: 400;
-          color: #edf2f7;
+        margin: 0;
+        height: 100%;
+        background-size: cover;
+        background-color: #1a202c;
+        background-blend-mode: multiply;
+        background-attachment: fixed;
+        background-image: url("./assets/media/images/rainbow-mountains-peru.jpg");
+        font-family: Inter, sans-serif;
+        font-size: 16px;
+        font-weight: 400;
+        color: #edf2f7;
       }
 
       .container {
-          margin: 0 auto 0 auto;
-          padding: 32px 32px;
-          text-align: center;
+        margin: 0 auto 0 auto;
+        padding: 32px 32px;
+        text-align: center;
       }
 
       p {
-          margin: 0 0 0 0;
+        margin: 0 0 0 0;
       }
 
       @font-face {
-          font-family: "Inter";
-          src: url("./assets/media/fonts/Inter.woff2") format("woff2");
-          font-display: swap;
+        font-family: "Inter";
+        src: url("./assets/media/fonts/Inter.woff2") format("woff2");
+        font-display: swap;
       }
 
       .m-t-md {
-          margin-top: 16px;
+        margin-top: 16px;
       }
 
       a {
-          text-decoration: none;
-          font-weight: 700;
-          color: #1a9595;
+        text-decoration: none;
+        font-weight: 700;
+        color: #1a9595;
       }
 
       a:visited {
-          color: #197a7a;
+        color: #197a7a;
       }
 
       a:hover {
-          color: #46c8c8;
+        color: #46c8c8;
       }
 
       a:active {
-          color: #197a7a;
+        color: #197a7a;
       }
 
       .license-container {
-          max-width: 800px;
-          margin: 0 auto 0 auto;
+        max-width: 800px;
+        margin: 0 auto 0 auto;
       }
-  </style>
-</head>
-<body>
-<div id="eofol" class="container">
-  <div class="license-container">
-    <h1>The MIT License (MIT)</h1>
+    </style>
+  </head>
+  <body>
+    <div id="eofol" class="container">
+      <div class="license-container">
+        <h1>The MIT License (MIT)</h1>
 
-    <p class="m-t-md">Copyright (c) 2024 Jakub Eliáš</p>
+        <p class="m-t-md">Copyright (c) 2024 Jakub Eliáš</p>
 
-    <p class="m-t-md">
-      Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
-      documentation files (the "Software"), to deal in the Software without restriction, including without limitation
-      the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and
-      to permit persons to whom the Software is furnished to do so, subject to the following conditions:
-    </p>
+        <p class="m-t-md">
+          Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
+          documentation files (the "Software"), to deal in the Software without restriction, including without
+          limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the
+          Software, and to permit persons to whom the Software is furnished to do so, subject to the following
+          conditions:
+        </p>
 
-    <p class="m-t-md">
-      The above copyright notice and this permission notice shall be included in all copies or substantial portions of
-      the Software.
-    </p>
+        <p class="m-t-md">
+          The above copyright notice and this permission notice shall be included in all copies or substantial portions
+          of the Software.
+        </p>
 
-    <p class="m-t-md">
-      THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
-      THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-      AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF
-      CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
-      IN THE SOFTWARE.
-    </p>
-  </div>
-</div>
+        <p class="m-t-md">
+          THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED
+          TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
+          THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF
+          CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
+          DEALINGS IN THE SOFTWARE.
+        </p>
+      </div>
+    </div>
 
-<script src="./assets/js/runtime.js" defer async></script>
-<script src="./assets/js/dependencies.js" defer async></script>
-<script src="./assets/js/license.js" defer async></script>
-<noscript>You need to enable JavaScript to run this app.</noscript>
-</body>
+    <script src="./assets/js/runtime.js" defer async></script>
+    <script src="./assets/js/dependencies.js" defer async></script>
+    <script src="./assets/js/license.js" defer async></script>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+  </body>
 </html>
