--- a/pages/level/second/index.html
+++ b/pages/level/second/index.html
@@ -109,6 +109,7 @@
 
       <p id="script">Script not injected.</p>
       <p id="module">External dependency not imported.</p>
+    </div>
 
     <script src="../../assets/js/runtime.js" defer async></script>
     <script src="../../assets/js/dependencies.js" defer async></script>
