Initialize traverse tree method, fix html parser warnings

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="en">
   <head>
     <title>Eofol4</title>
@@ -116,9 +115,9 @@
       </div>
     </div>
 
-    <script src="./assets/js/runtime.js" defer async></script>
-    <script src="./assets/js/dependencies.js" defer async></script>
-    <script src="./assets/js/index.js" defer async></script>
+    <script src="./assets/js/runtime.js" defer="defer" async="async"></script>
+    <script src="./assets/js/dependencies.js" defer="defer" async="async"></script>
+    <script src="./assets/js/index.js" defer="defer" async="async"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
 </html>
