--- a/pages/404.html
+++ b/pages/404.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="en">
   <head>
     <title>Eofol4 - Page not found</title>
@@ -115,9 +114,9 @@
       </div>
     </div>
 
-    <script src="./assets/js/runtime.js" defer async></script>
-    <script src="./assets/js/dependencies.js" defer async></script>
-    <script src="./assets/js/404.js" defer async></script>
+    <script src="./assets/js/runtime.js" defer="defer" async="async"></script>
+    <script src="./assets/js/dependencies.js" defer="defer" async="async"></script>
+    <script src="./assets/js/404.js" defer="defer" async="async"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
 </html>
