Add eofol runtime lib, causes Webpack error: null

--- a/pages/index.html
+++ b/pages/index.html
@@ -37,6 +37,9 @@
 
       <p id="script">Script not injected.</p>
       <p id="module">External dependency not imported.</p>
+      <p id="breakpoint">Breakpoint: unknown</p>
+      <p id="sx">Dynamic styling using `sx`</p>
+      <p id="sy">Dynamic styling using `sy`</p>
 
       <div class="col m-t-md">
         <a href="./index2.html">Second page</a>
