--- a/pages/404.html
+++ b/pages/404.html
@@ -44,6 +44,7 @@
     </div>
 
     <script src="./assets/js/runtime.js" defer="defer" async="async"></script>
+    <script src="./assets/js/eofol.js" defer="defer" async="async"></script>
     <script src="./assets/js/dependencies.js" defer="defer" async="async"></script>
     <script src="./assets/js/404.js" defer="defer" async="async"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
