Fix link clickboxes and tsconfig

--- a/pages/level/index.html
+++ b/pages/level/index.html
@@ -39,8 +39,8 @@
       <p id="module">External dependency not imported.</p>
 
       <div class="col m-t-md">
-        <a href="../index2.html">Second page</a>
-        <a href="../map.html">Map</a>
+        <div><a href="../index2.html">Second page</a></div>
+        <div><a href="../map.html">Map</a></div>
       </div>
     </div>
 
