--- a/pages/404.html
+++ b/pages/404.html
@@ -38,8 +38,8 @@
       <p id="404-msg">The requested page does not exist.</p>
 
       <div class="col m-t-md">
-        <a href="javascript:history.back()">Back</a>
-        <a href="./index.html">Back to index page</a>
+        <div><a href="javascript:history.back()">Back</a></div>
+        <div><a href="./index.html">Back to index page</a></div>
       </div>
     </div>
 
