--- a/pages/index.html
+++ b/pages/index.html
@@ -42,8 +42,8 @@
       <p id="sy">Dynamic styling using `sy`</p>
 
       <div class="col m-t-md">
-        <a href="./index2.html">Second page</a>
-        <a href="./map.html">Map</a>
+        <div><a href="./index2.html">Second page</a></div>
+        <div><a href="./map.html">Map</a></div>
       </div>
     </div>
 
