Add initial static compilation

--- a/pages/index.html
+++ b/pages/index.html
@@ -41,6 +41,10 @@
       <p id="sx">Dynamic styling using `sx`</p>
       <p id="sy">Dynamic styling using `sy`</p>
 
+      <e name="first" eofolAttribute="UwU!!!"
+        ><h2>Eofol component children example</h2>
+        <span>TRRRRRRRRRRRRRRR</span></e
+      >
       <div class="col m-t-md">
         <div><a href="./index2.html">Second page</a></div>
         <div><a href="./map.html">Map</a></div>
