--- a/pages/index.html
+++ b/pages/index.html
@@ -42,8 +42,7 @@
       <p id="sy">Dynamic styling using `sy`</p>
 
       <e name="first" eofolAttribute="UwU!!!"
-        ><h2>Eofol component children example</h2>
-        <span>TRRRRRRRRRRRRRRR</span></e
+        ><span>Eofol component children example</span> <span>TRRRRRRRRRRRRRRR</span></e
       >
       <div class="col m-t-md">
         <div><a href="./index2.html">Second page</a></div>
