--- a/pages/license.html
+++ b/pages/license.html
@@ -15,9 +15,9 @@
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
-    <link rel="icon" href="favicon.png" />
+    <link rel="icon" href="./favicon.png" />
     <link rel="apple-touch-icon" href="./assets/media/images/logo-sm.png" />
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="./manifest.json" />
     <style>
       body {
         background-image: url("./assets/media/images/rainbow-mountains-peru.jpg");
@@ -25,8 +25,8 @@
     </style>
   </head>
   <body>
-    <div id="eofol" class="container">
-      <div class="license-container">
+    <div class="container">
+      <div class="container-md">
         <h1>The MIT License (MIT)</h1>
 
         <p class="m-t-md">Copyright (c) 2024 Jakub Eliáš</p>
