--- a/pages/index.html
+++ b/pages/index.html
@@ -47,6 +47,7 @@
       <div class="col m-t-md">
         <div><a href="./index2.html">Second page</a></div>
         <div><a href="./map.html">Map</a></div>
+        <div><a href="./generated.html">Generated page</a></div>
       </div>
     </div>
 
