--- a/pages/license.html
+++ b/pages/license.html
@@ -15,7 +15,7 @@
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="512" />
     <meta property="og:image:height" content="512" />
-    <link rel="icon" href="./favicon.png" />
+    <link rel="icon" href="./assets/media/images/favicon.png" />
     <link rel="apple-touch-icon" href="./assets/media/images/logo-sm.png" />
     <link rel="manifest" href="./manifest.json" />
     <style>
