Add define component api

--- a/pages/index.html
+++ b/pages/index.html
@@ -42,8 +42,9 @@
       <p id="sy">Dynamic styling using `sy`</p>
 
       <e name="first" eofolAttribute="UwU!!!"
-        ><span>Eofol component children example</span> <span>TRRRRRRRRRRRRRRR</span></e
+        ><span>Eofol component children example</span>Text content<span>TRRRRRRRRRRRRRRR</span></e
       >
+
       <div class="col m-t-md">
         <div><a href="./index2.html">Second page</a></div>
         <div><a href="./map.html">Map</a></div>
