Render stateful component as a child on static render, also tag

--- a/pages/index.html
+++ b/pages/index.html
@@ -42,7 +42,20 @@
       <p id="sy">Dynamic styling using `sy`</p>
 
       <e name="first" eofolAttribute="UwU!!!"
-        ><span>Eofol component children example</span>Text content<span>TRRRRRRRRRRRRRRR</span></e
+        ><span>Eofol component children example</span>Text content<span
+          >Another Eofol component children example</span
+        ></e
+      >
+
+      <e name="second"></e>
+
+      <e name="second">
+        <e name="first"
+          ><span>Eofol component children example</span>Text content<span
+            >Another Eofol component children example</span
+          >
+        </e>
+        Text content<span>Tag content</span></e
       >
 
       <div class="col m-t-md">
