Handle children intermediate

--- a/pages/index.html
+++ b/pages/index.html
@@ -41,22 +41,13 @@
       <p id="sx">Dynamic styling using `sx`</p>
       <p id="sy">Dynamic styling using `sy`</p>
 
-      <e name="first" eofolAttribute="UwU!!!"
-        ><span>Eofol component children example</span>Text content<span
-          >Another Eofol component children example</span
-        ></e
-      >
+      <e name="first" eofolattribute="UwU!!!">
+        <span>Eofol component children example</span>
+        Text content
+        <span>Another Eofol component children example</span>
+      </e>
 
       <e name="second"></e>
-
-      <e name="second">
-        <e name="first"
-          ><span>Eofol component children example</span>Text content<span
-            >Another Eofol component children example</span
-          >
-        </e>
-        Text content<span>Tag content</span></e
-      >
 
       <div class="col m-t-md">
         <div><a href="./index2.html">Second page</a></div>
