Add weather widget example for effect/state

--- a/pages/index.html
+++ b/pages/index.html
@@ -48,6 +48,8 @@
 
       <e name="second"></e>
 
+      <e name="weather"></e>
+
       <div class="col m-t-md">
         <div><a href="./index2.html">Second page</a></div>
         <div><a href="./map.html">Map</a></div>
