--- a/pages/index.html
+++ b/pages/index.html
@@ -50,6 +50,10 @@
 
       <e name="weather"></e>
 
+      <e name="subscribed"></e>
+      <e name="projection"></e>
+      <e name="storeSetter"></e>
+
       <div class="col m-t-md">
         <div><a href="./index2.html">Second page</a></div>
         <div><a href="./map.html">Map</a></div>
