--- a/pages/index.html
+++ b/pages/index.html
@@ -54,6 +54,8 @@
       <e name="projection"></e>
       <e name="storeSetter"></e>
 
+      <e name="example"></e>
+
       <div class="col m-t-md">
         <div><a href="./index2.html">Second page</a></div>
         <div><a href="./map.html">Map</a></div>
