Push prefetch assets from links instead of collected views

--- a/pages/index.html
+++ b/pages/index.html
@@ -56,11 +56,7 @@
 
       <e name="example"></e>
 
-      <div class="col m-t-md">
-        <div><a href="./index2.html">Second page</a></div>
-        <div><a href="./map.html">Map</a></div>
-        <div><a href="./generated.html">Generated page</a></div>
-      </div>
+      <e name="links"></e>
     </div>
 
     <script src="./assets/js/runtime.js" defer="defer" async="async"></script>
