Extract store error logging, test createSelector

--- a/pages/index.html
+++ b/pages/index.html
@@ -52,6 +52,7 @@
 
       <e name="subscribed"></e>
       <e name="projection"></e>
+      <e name="createdSelector"></e>
       <e name="storeSetter"></e>
 
       <e name="example"></e>
