Add Virtual and Flat types, switch wrapper so far with workaround true for all

--- a/pages/index.html
+++ b/pages/index.html
@@ -48,6 +48,10 @@
 
       <e name="second"></e>
 
+      <e name="fourth"></e>
+      <e name="fragment"></e>
+      <e name="hook"></e>
+
       <e name="weather"></e>
 
       <e name="subscribed"></e>
