Prefetch linked view images

--- a/pages/level/second/index.html
+++ b/pages/level/second/index.html
@@ -36,6 +36,8 @@
       />
 
       <p id="script">Script not injected.</p>
+
+      <e name="examplex"></e>
     </div>
 
     <script src="../../assets/js/runtime.js" defer="defer" async="async"></script>
