Add before & after middleware to Slice API, add Slice API counter example

--- a/pages/index.html
+++ b/pages/index.html
@@ -60,6 +60,8 @@
       <e name="example"></e>
 
       <e name="links"></e>
+
+      <e name="counter"></e>
     </div>
 
     <script src="./assets/js/runtime.js" defer="defer" async="async"></script>
