Test controlled input and select

--- a/pages/index.html
+++ b/pages/index.html
@@ -62,6 +62,9 @@
       <e name="links"></e>
 
       <e name="counter"></e>
+
+      <e name="inputExample"></e>
+      <e name="selectExample"></e>
     </div>
 
     <script src="./assets/js/runtime.js" defer="defer" async="async"></script>
