Add fontface declaration to pages and relativize font paths

--- a/pages/license.html
+++ b/pages/license.html
@@ -19,6 +19,11 @@
     <link rel="apple-touch-icon" href="./assets/media/images/logo-sm.png" />
     <link rel="manifest" href="./manifest.json" />
     <style>
+      @font-face {
+        font-family: "Inter";
+        src: url("./assets/media/fonts/Inter.woff2") format("woff2");
+        font-display: swap;
+      }
       body {
         background-image: url("./assets/media/images/rainbow-mountains-peru.jpg");
       }
