Add language select

--- a/pages/index.html
+++ b/pages/index.html
@@ -71,6 +71,7 @@
 
       <e name="inputExample"></e>
       <e name="selectExample"></e>
+      <e name="languageSelect"></e>
     </div>
 
     <script src="./assets/js/runtime.js" defer="defer" async="async"></script>
